--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,13 @@ body {
   color: #333;
   padding-bottom: 60px;
   flex-direction: column;
-  display: flex;
   width: 100%;
   overflow-x: hidden;
-  align-items: center;
 }
 
 body .biodata{
+  display: flex;
+  align-items: center;
   justify-content: center;
 }
 
@@ -40,7 +40,7 @@ header p{
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
   justify-content: center;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   gap: 1.5rem;
   padding: 2rem;
   width: 100%;
@@ -102,7 +102,7 @@ header p{
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
   gap: 10px;
-  max-width: 800px;
+  max-width: 1000px;
   margin: auto;
   padding: 0 10px;
   box-sizing: border-box;
@@ -128,7 +128,7 @@ header p{
 @media (max-width: 600px) {
   .album-grid {
     display: none;
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(2, 1fr));
   }
 
   .album-slider {
