--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ header p{
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
   justify-content: center;
-  /* flex-wrap: wrap; */
+  flex-wrap: wrap;
   gap: 1.5rem;
   padding: 2rem;
   width: 100%;
