--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,33 @@ body .biodata{
   align-items: center;
 }
 
+@media (max-width: 600px) {
+  .card-grid{
+    grid-template-columns: 1fr;
+  }
+  
+  .album-grid {
+    display: none;
+    grid-template-columns: repeat(auto-fit, minmax(2, 1fr));
+  }
+
+  .album-slider {
+    display: flex;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    gap: 10px;
+    padding: 10px;
+  }
+
+  .album-slider img {
+    flex: 0 0 100%;
+    width: 100%;
+    border-radius: 10px;
+    scroll-snap-align: start;
+    object-fit: cover;
+  }
+}
+
 @keyframes gradientFlow {
   0% {background-position: 0% 50%;}
   50% {background-position: 100% 50%;}
@@ -123,29 +150,6 @@ header p{
 
 .album-slider {
   display: none;
-}
-
-@media (max-width: 600px) {
-  .album-grid {
-    display: none;
-    grid-template-columns: repeat(auto-fit, minmax(2, 1fr));
-  }
-
-  .album-slider {
-    display: flex;
-    overflow-x: auto;
-    scroll-snap-type: x mandatory;
-    gap: 10px;
-    padding: 10px;
-  }
-
-  .album-slider img {
-    flex: 0 0 100%;
-    width: 100%;
-    border-radius: 10px;
-    scroll-snap-align: start;
-    object-fit: cover;
-  }
 }
 
 
