--- a/css/style.css
+++ b/css/style.css
@@ -19,13 +19,13 @@ body .biodata{
 
 @media (max-width: 900px) {
   .card-grid {
-    grid-template-columns: 1fr;
+    grid-template-columns: repeat(1, 1fr);
   }
 }
 
 @media (max-width: 600px) {
   .card-grid{
-    grid-template-columns: 1fr;
+    grid-template-columns: repeat(1, 1fr);
   }
   
   /* .album-grid {
@@ -132,7 +132,7 @@ header p{
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
   gap: 10px;
-  max-width: 1000px;
+  max-width: 100px;
   margin: auto;
   padding: 0 10px;
   box-sizing: border-box;
