--- a/css/style.css
+++ b/css/style.css
@@ -70,12 +70,12 @@ header p{
 
 .card-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+  grid-template-columns: repeat(5, 1fr);
   gap: 1.5rem;
   padding: 2rem;
   width: 100%;
   flex-wrap: wrap;
-  max-width: 1000px;
+  max-width: 1200px;
   margin: 0 auto;
   box-sizing: border-box;
 }
